--- a/.github/workflows/auto.yml
+++ b/.github/workflows/auto.yml
@@ -1,4 +1,4 @@
-name: CI
+name: automatic
 on:
   push:
     branches: [ main ]
@@ -26,7 +26,5 @@ jobs:
       - name: finishing
         run: |
           git add .
-          git config user.name 'CRSXon'
-          git config user.email 'crackerhacker720@gmail.com'
           git commit -m "automatic"
           git push 
