--- a/.github/workflows/auto.yml
+++ b/.github/workflows/auto.yml
@@ -17,6 +17,8 @@ jobs:
       - name: second commit
         run: |
           git add .
+          git config user.name 'CRSXon'
+          git config user.email 'crackerhacker720@gmail.com'
           git commit -m "automatic" -m "automatic"
           git push 
       - name: third commit
