--- a/.github/workflows/auto.yml
+++ b/.github/workflows/auto.yml
@@ -4,7 +4,7 @@ on:
     branches: [ main ]
   workflow_dispatch:
   schedule:
-    - cron: '*/10 * * * *'
+    - cron: '* * * * *'
   pull_request:
     branches: [ main ]
 jobs:
